# openapi/attom-api-schema.yaml
@@ -83,114 +83,6 @@ paths:
                 type: object
                 properties: {}
                 description: ErrorResponse
-  /property/v2/salescomparables/address/{street}/{city}/{county}/{state}/{zip}:
-    get:
-      summary: Comparable sales for an address-based path
-      tags:
-        - Property
-      parameters:
-        - schema:
-            type: string
-          required: true
-          name: street
-          in: path
-        - schema:
-            type: string
-          required: true
-          name: city
-          in: path
-        - schema:
-            type: string
-          required: true
-          name: county
-          in: path
-        - schema:
-            type: string
-          required: true
-          name: state
-          in: path
-        - schema:
-            type: string
-          required: true
-          name: zip
-          in: path
-        - schema:
-            type: string
-          required: false
-          name: searchType
-          in: query
-        - schema:
-            type: number
-          required: false
-          name: minComps
-          in: query
-        - schema:
-            type: number
-          required: false
-          name: maxComps
-          in: query
-        - schema:
-            type: number
-          required: false
-          name: miles
-          in: query
-        - schema:
-            type: boolean
-          required: false
-          name: sameCity
-          in: query
-        - schema:
-            type: boolean
-          required: false
-          name: useSameTargetCode
-          in: query
-        - schema:
-            type: number
-          required: false
-          name: bedroomsRange
-          in: query
-        - schema:
-            type: number
-          required: false
-          name: bathroomRange
-          in: query
-        - schema:
-            type: number
-          required: false
-          name: sqFeetRange
-          in: query
-        - schema:
-            type: number
-          required: false
-          name: lotSizeRange
-          in: query
-        - schema:
-            type: number
-          required: false
-          name: saleDateRange
-          in: query
-        - schema:
-            type: number
-          required: false
-          name: yearBuiltRange
-          in: query
-        - schema:
-            type: string
-          required: false
-          name: ownerOccupied
-          in: query
-        - schema:
-            type: string
-          required: false
-          name: distressed
-          in: query
-      responses:
-        "200":
-          description: Comparable sales data
-          content:
-            application/json:
-              schema:
-                description: SalesComparablesAddressResp
   /property/v2/salescomparables/propid/{propId}:
     get:
       summary: Comparable sales for a property by propId (fallback from address =>
